# FileManager

./: .gitignore  CMakeLists.txt  FileManager.pro  MainWindow1.ui  fileTrigram.cpp  fileTrigram.h  finderOfCopies.cpp  finderOfCopies.h  finderOfStrings.cpp  finderOfStrings.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow1.ui  mainwindow2.cpp  mainwindow2.h  trigram_process.cpp  trigram_process.h
Desktop/Резервная_копия_проекта/FileManager/: README.md  mainwindow.cpp  mainwindow.h
